# Financial-Intelligence-Agentic-System

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  pyproject.toml
src/fia_agent/: __init__.py  app.py  config.py  main.py  models.py
src/fia_agent/agents/: __init__.py  conductor.py  query_generator.py  verifier.py  visualizer.py
src/fia_agent/data/: sample_schema.yaml
src/fia_agent/mcp/: server.py  tools.py
src/fia_agent/services/: __init__.py  athena_client.py  audit.py  memory.py  query_executor.py  schema_discovery.py  security.py  snowflake_client.py  text2sql.py
src/financial_intelligence_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_text2sql.py
